Fixed size of numbers on faq page
They were way too small.

--- a/assets/scss/_donate.scss
+++ b/assets/scss/_donate.scss
@@ -799,3 +799,9 @@
     }
   }
 }
+
+.donor-faq {
+  li {
+    font-size: 30px;
+  }
+}
